[gd_scene load_steps=5 format=3 uid="uid://bl5eci0hpso2m"]

[ext_resource type="Script" uid="uid://b7f75ok6e4thq" path="res://quadcopter/flight_controller/FlightController.gd" id="1_apqoi"]
[ext_resource type="Script" uid="uid://btk5vyqql5uby" path="res://quadcopter/pid controller/pidcontroller.gd" id="2_nfqh2"]
[ext_resource type="Script" uid="uid://bki3bdaiys76u" path="res://GUI/data plotter/data_plotter.gd" id="3_k5t54"]

[sub_resource type="BoxMesh" id="BoxMesh_33ynk"]
size = Vector3(0.03, 0.008, 0.03)

[node name="FlightController" type="Node3D"]
script = ExtResource("1_apqoi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_33ynk")

[node name="PID_pitch" type="Node" parent="."]
script = ExtResource("2_nfqh2")
Kp = 0.02
throttle_influence = 0.8

[node name="PID_roll" type="Node" parent="."]
script = ExtResource("2_nfqh2")
Kp = 0.02
throttle_influence = 0.8

[node name="PID_yaw" type="Node" parent="."]
script = ExtResource("2_nfqh2")
Kp = 0.01
throttle_influence = 0.8
clamp_min = -0.4
clamp_max = 0.4

[node name="DataPlotter" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -235.0
offset_top = 43.0
offset_right = 235.0
offset_bottom = 322.0
grow_horizontal = 2
script = ExtResource("3_k5t54")
max_data_len = 1000
stream_colors = Array[Color]([Color(1, 0, 0, 1), Color(0, 1, 0, 1), Color(0, 0, 1, 1), Color(0, 0, 0, 1)])
data_min = -20.0
data_max = 20.0
metadata/_custom_type_script = "uid://bki3bdaiys76u"
